--- a/AdminApi/src/AdminApi/appsettings.json
+++ b/AdminApi/src/AdminApi/appsettings.json
@@ -22,7 +22,7 @@
         },
         "Devices": {
             "Application": {
-                "AddressPrefix": "id1",
+                "InstanceUrl": "prod.enmeshed.eu",
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
