--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -28,7 +28,7 @@
         },
         "Devices": {
             "Application": {
-                "AddressPrefix": "id1",
+                "InstanceUrl": "prod.enmeshed.eu",
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
@@ -45,7 +45,7 @@
         },
         "Messages": {
             "Application": {
-                "AddressPrefix": "id1",
+                "InstanceUrl": "prod.enmeshed.eu",
                 "MaxNumberOfUnreceivedMessagesFromOneSender": 20,
                 "Pagination": {
                     "DefaultPageSize": 50,
