--- a/Jobs/src/Job.IdentityDeletion/appsettings.json
+++ b/Jobs/src/Job.IdentityDeletion/appsettings.json
@@ -21,7 +21,6 @@
     },
     "Devices": {
       "Application": {
-        "AddressPrefix": "id1",
         "Pagination": {
           "DefaultPageSize": 50,
           "MaxPageSize": 200
@@ -38,12 +37,12 @@
     },
     "Messages": {
       "Application": {
-        "AddressPrefix": "id1",
-        "MaxNumberOfUnreceivedMessagesFromOneSender": 20,
-        "Pagination": {
-          "DefaultPageSize": 50,
-          "MaxPageSize": 200
-        }
+          "InstanceUrl": "prod.enmeshed.eu",
+          "MaxNumberOfUnreceivedMessagesFromOneSender": 20,
+          "Pagination": {
+              "DefaultPageSize": 50,
+              "MaxPageSize": 200
+          }
       }
     },
     "Relationships": {
