ci: add NMSHD_TEST_BASEURL_ADMIN_API env var to transport tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,9 +116,9 @@ jobs:
           repository: nmshd/runtime
           path: runtime
       - name: Build Consumer API and Admin API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml build -d --parallel
+        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml build --parallel
       - name: Run Consumer API & Admin API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml up -d
+        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml up -d --no-build
       - name: Install runtime dependencies
         working-directory: ./runtime
         run: npm install
@@ -128,6 +128,7 @@ jobs:
           NMSHD_TEST_BASEURL: http://localhost:5000
           NMSHD_TEST_CLIENTID: test
           NMSHD_TEST_CLIENTSECRET: test
+          NMSHD_TEST_BASEURL_ADMIN_API: http://localhost:5173
         run: npm run test:local:lokijs
       - name: Save Docker Logs
         if: failure()
@@ -165,6 +166,7 @@ jobs:
           NMSHD_TEST_BASEURL: http://localhost:5000
           NMSHD_TEST_CLIENTID: test
           NMSHD_TEST_CLIENTSECRET: test
+          NMSHD_TEST_BASEURL_ADMIN_API: http://localhost:5173
         run: npm run test:local:lokijs
       - name: Save Docker Logs
         if: failure()
