--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,6 +129,7 @@ jobs:
           NMSHD_TEST_CLIENTID: test
           NMSHD_TEST_CLIENTSECRET: test
           NMSHD_TEST_BASEURL_ADMIN_API: http://localhost:5173
+          NMSHD_TEST_ADMIN_API_KEY: test
         run: npm run test:local:lokijs
       - name: Save Docker Logs
         if: failure()
@@ -167,6 +168,7 @@ jobs:
           NMSHD_TEST_CLIENTID: test
           NMSHD_TEST_CLIENTSECRET: test
           NMSHD_TEST_BASEURL_ADMIN_API: http://localhost:5173
+          NMSHD_TEST_ADMIN_API_KEY: test
         run: npm run test:local:lokijs
       - name: Save Docker Logs
         if: failure()
