--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -156,8 +156,10 @@ jobs:
         with:
           repository: nmshd/runtime
           path: runtime
-      - name: Run Consumer API
-        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml up -d
+      - name: Build Consumer API and Admin API
+        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml build --parallel
+      - name: Run Consumer API & Admin API
+        run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml up -d --no-build
       - name: Install runtime dependencies
         working-directory: ./runtime
         run: npm install
