--- a/AdminUi/apps/admin_ui/pubspec.yaml
+++ b/AdminUi/apps/admin_ui/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.4.0 <4.0.0"
+  flutter: ">=3.22.0"
 
 dependencies:
   admin_api_sdk: ^1.0.0
