--- a/AdminUi/packages/admin_api_types/pubspec.yaml
+++ b/AdminUi/packages/admin_api_types/pubspec.yaml
@@ -3,7 +3,7 @@ description: The types used by the Admin API.
 version: 1.0.0
 
 environment:
-  sdk: ^3.3.0
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   json_annotation: ^4.8.1
