--- a/AdminUi/packages/admin_api_sdk/pubspec.yaml
+++ b/AdminUi/packages/admin_api_sdk/pubspec.yaml
@@ -6,11 +6,11 @@ environment:
 
 dependencies:
   admin_api_types: ^1.0.0
-  dio: ^5.4.0
-  json_annotation: ^4.8.1
+  dio: ^5.4.3+1
+  json_annotation: ^4.9.0
   meta: any
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  json_serializable: ^6.7.1
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
   very_good_analysis: ^5.1.0
