--- a/AdminUi/packages/admin_api_types/pubspec.yaml
+++ b/AdminUi/packages/admin_api_types/pubspec.yaml
@@ -3,12 +3,12 @@ description: The types used by the Admin API.
 version: 1.0.0
 
 environment:
-  sdk: ^3.3.0
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
-  build_runner: ^2.4.7
-  json_serializable: ^6.7.1
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
   very_good_analysis: ^5.1.0
