Admin API: Use Admin API SDK for integration tests (#609)
* test: admin api integration tests with SDK

* fix: missing route prefix

* fix: indentation

* feat: Add OData conversion support

* feat: Add List Identities route

* test: Add challenges endpoint to admin api and respective SDK.

* fix: enable challenge validation for identity creation through admin api

* fix: add missing settings for challenges module

* fix: namespace

* fix: add challenges connection string to adminui app settings override

* fix: update dockerfile

* fix: Use ApiKey for Identity controller authorization

* test: add odata identities overview test

* fix: Use custom OData response class and rewrite builder to use it

* fix: Remove unused search/replace patterns

* fix: adjust integration tests to account for odata and standard api calls. fix schema validation without response content class.

* fix: add missing setting to sdk

* feat: add support for challenge and identity creation

* fix: add missing api version parameter

* fix: Remove api version parameter

* fix: Re-add the ListIdentities route (removed with merge)

* fix: step definition changes after merging with 'main'

* fix: remove request prefix since it's already set in the respective clients

* test: ignore messages tests while sdk does not support requests

* fix: challenges endpoint did not follow new sdk convention, causing request errors

* refactor: remove unused api version setting

* refactor: remove unused isOdata parameter

* fix: add custom mapping for challenge id due to lack of json converter

* fix: admin api sdk wrong route for identity creation

* feat: add messages endpoint to admin api sdk

* feat: update message overviews integration tests with new sdk features

* fix: cached schema in json validation throw when JArray

* refactor: revert changes made by resharper auto format

* fix: remove space from file name

* test: add content type ch

--- a/AdminApi/test/AdminApi.Tests.Integration/AdminApi.Tests.Integration.csproj
+++ b/AdminApi/test/AdminApi.Tests.Integration/AdminApi.Tests.Integration.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\AdminApi.Sdk\AdminApi.Sdk.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
     <ProjectReference Include="..\..\src\AdminApi\AdminApi.csproj" />
   </ItemGroup>
