feat: add InstanceUrl to appsettings.override.json

--- a/AdminApi/src/AdminApi/appsettings.override.json
+++ b/AdminApi/src/AdminApi/appsettings.override.json
@@ -26,17 +26,11 @@
         "SqlDatabase": {
             "Provider": "Postgres",
             "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//            "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
+            // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
         }
     },
     "Modules": {
         "Challenges": {
-            "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
-            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
@@ -47,16 +41,13 @@
         },
         "Devices": {
             "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
+                "InstanceUrl": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
                     "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//                    "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
                 },
                 "PushNotifications": {
                     "Provider": "Dummy"
@@ -64,17 +55,11 @@
             }
         },
         "Quotas": {
-            "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
-            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
                     "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//                    "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True"
                 }
             }
         }
