ci: add InstanceUrl to config of pipelines

--- a/.ci/appsettings.override.sqlserver.json
+++ b/.ci/appsettings.override.sqlserver.json
@@ -37,6 +37,9 @@
             }
         },
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "SqlServer",
@@ -60,6 +63,9 @@
             }
         },
         "Messages": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "SqlServer",
