--- a/.ci/appsettings.override.postgres.json
+++ b/.ci/appsettings.override.postgres.json
@@ -37,6 +37,9 @@
             }
         },
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
@@ -60,6 +63,9 @@
             }
         },
         "Messages": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
