chore: fix remaining appsettings files

--- a/docker-compose/adminui.appsettings.override.json
+++ b/docker-compose/adminui.appsettings.override.json
@@ -25,37 +25,28 @@
         "SqlDatabase": {
             "Provider": "Postgres",
             "ConnectionString": "User ID=adminUi;Password=Passw0rd;Server=postgres;Port=5432;Database=enmeshed;" // postgres
-            //"ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=adminUi;Password=Passw0rd;TrustServerCertificate=True"
+            // "ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=adminUi;Password=Passw0rd;TrustServerCertificate=True"
         }
     },
     "Modules": {
         "Challenges": {
-            "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
-            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
                     "ConnectionString": "User ID=challenges;Password=Passw0rd;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-                    //"ConnectionString": "Server=localhost;Database=enmeshed;User Id=challenges;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=challenges;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
                 }
             }
         },
         "Devices": {
             "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
+                "InstanceUrl": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
                     "ConnectionString": "User ID=devices;Password=Passw0rd;Server=postgres;Port=5432;Database=enmeshed;" // postgres
-                    //"ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=devices;Password=Passw0rd;TrustServerCertificate=True"
+                    // "ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=devices;Password=Passw0rd;TrustServerCertificate=True"
                 },
                 "PushNotifications": {
                     "Provider": "Dummy"
@@ -63,17 +54,11 @@
             }
         },
         "Quotas": {
-            "Application": {
-                "Pagination": {
-                    "DefaultPageSize": 50,
-                    "MaxPageSize": 200
-                }
-            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
                     "ConnectionString": "User ID=quotas;Password=Passw0rd;Server=postgres;Port=5432;Database=enmeshed;" // postgres
-                    //"ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=quotas;Password=Passw0rd;TrustServerCertificate=True"
+                    // "ConnectionString": "Server=ms-sql-server;Database=enmeshed;User Id=quotas;Password=Passw0rd;TrustServerCertificate=True"
                 }
             }
         }
