--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           repository: nmshd/runtime
           path: runtime
-          ref: feature/backbone-specific-addresses
+          ref: release/v5
       - name: Build Consumer API and Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml build --parallel
       - name: Run Consumer API & Admin API
@@ -157,7 +157,7 @@ jobs:
         with:
           repository: nmshd/runtime
           path: runtime
-          ref: feature/backbone-specific-addresses
+          ref: release/v5
       - name: Build Consumer API and Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml build --parallel
       - name: Run Consumer API & Admin API
