--- a/helm/templates/sendidentitydeletionreminders/cronjob.yaml
+++ b/helm/templates/sendidentitydeletionreminders/cronjob.yaml
@@ -18,6 +18,9 @@ spec:
       backoffLimit: {{ .Values.sendidentitydeletionreminders.backoffLimit }}
       template:
         spec:
+          {{- with .Values.global.serviceAccount.name}}
+          serviceAccountName: {{ . }}
+          {{- end }}
           restartPolicy: Never
           {{- with .Values.sendidentitydeletionreminders.podSecurityContext }}
           securityContext:
