--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -141,6 +141,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Install script dependencies
         run: npm install --prefix ./.ci
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Log in to Docker Hub for accessing the cloud builder
         uses: docker/login-action@v3
         with:
