fix: add service account for databasemigrator

--- a/helm/templates/databasemigrator/job.yaml
+++ b/helm/templates/databasemigrator/job.yaml
@@ -19,6 +19,9 @@ spec:
       labels:
         app: {{ .Values.databasemigrator.name }}
     spec:
+      {{- with .Values.global.serviceAccount.name}}
+      serviceAccountName: {{ . }}
+      {{- end }}
       restartPolicy: Never
       {{- with .Values.databasemigrator.podSecurityContext }}
       securityContext:
