--- a/BuildingBlocks/src/BuildingBlocks.SDK/BuildingBlocks.SDK.csproj
+++ b/BuildingBlocks/src/BuildingBlocks.SDK/BuildingBlocks.SDK.csproj
@@ -4,4 +4,7 @@
         <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.16" />
         <PackageReference Include="NJsonSchema.NewtonsoftJson" Version="11.0.0" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Tooling\Tooling.csproj" />
+    </ItemGroup>
 </Project>
