--- a/performance-tests/.eslintrc
+++ b/performance-tests/.eslintrc
@@ -5,6 +5,14 @@
         "project": ["tsconfig.json"]
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "@typescript-eslint/naming-convention": ["error", {
+            "selector": "variableLike",
+            "format": null,
+            "custom": {
+              "regex": "^(@type|@version|@context|(\\$?[a-zA-Z0-9]+)([A-Z][a-z0-9]*)*)(\\.(@type|@version|@context|[a-z0-9]+([A-Z][a-z0-9\\s]*)*))*$",
+              "match": true
+            }
+        }]
     }
 }
