ci: add missing dependencies to publish helm chart job

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -203,6 +203,8 @@ jobs:
       - publish-admin-ui
       - publish-consumer-api
       - publish-event-handler
+      - publish-database-migrator
+      - publish-identity-deletion-jobs
     steps:
       - name: Checkout
         uses: actions/checkout@v4
