--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -59,3 +59,17 @@ updates:
       - "daniel-almeida-konkconsulting"
     labels:
       - "dependencies"
+
+  ##### Docker #####
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    groups:
+      update-docker-dependencies:
+        patterns:
+          - "*"
+    reviewers:
+      - "tnotheis"
+    labels:
+      - "dependencies"
