ci: specify all Dockerfile directories

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -62,7 +62,13 @@ updates:
 
   ##### Docker #####
   - package-ecosystem: "docker"
-    directory: "/"
+    directories:
+      - "AdminApi/src/AdminApi"
+      - "ConsumerApi"
+      - "DatabaseMigrator"
+      - "EventHandlerService/src/EventHandlerService"
+      - "Jobs/src/Job.IdentityDeletion"
+      - "Modules/Devices/src/Devices.AdminCli"
     schedule:
       interval: "weekly"
     groups:
