ci: add leading slash to directories

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -63,12 +63,12 @@ updates:
   ##### Docker #####
   - package-ecosystem: "docker"
     directories:
-      - "AdminApi/src/AdminApi"
-      - "ConsumerApi"
-      - "DatabaseMigrator"
-      - "EventHandlerService/src/EventHandlerService"
-      - "Jobs/src/Job.IdentityDeletion"
-      - "Modules/Devices/src/Devices.AdminCli"
+      - "/AdminApi/src/AdminApi"
+      - "/ConsumerApi"
+      - "/DatabaseMigrator"
+      - "/EventHandlerService/src/EventHandlerService"
+      - "/Jobs/src/Job.IdentityDeletion"
+      - "/Modules/Devices/src/Devices.AdminCli"
     schedule:
       interval: "weekly"
     groups:
