--- a/performance-tests/.eslintrc
+++ b/performance-tests/.eslintrc
@@ -2,7 +2,7 @@
     "ignorePatterns": ["/*", "!/src"],
     "extends": ["@js-soft/ts"],
     "parserOptions": {
-        "project": ["tsconfig.json"]
+        "project": "**/tsconfig.json"
     },
     "rules": {
         "no-console": "off",
