--- a/Modules/Devices/src/Devices.Infrastructure/Devices.Infrastructure.csproj
+++ b/Modules/Devices/src/Devices.Infrastructure/Devices.Infrastructure.csproj
@@ -27,20 +27,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Properties\Resources.Designer.cs">
-        <DesignTime>True</DesignTime>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>Resources.resx</DependentUpon>
-      </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Update="PushNotifications\Translations\PushNotifications.Translations.IPushNotificationResource.en.resx">
+      <EmbeddedResource Update="PushNotifications\Translations\IPushNotificationResource.en.resx">
         <Generator>PublicResXFileCodeGenerator</Generator>
-      </EmbeddedResource>
-      <EmbeddedResource Update="Properties\Resources.resx">
-        <Generator>PublicResXFileCodeGenerator</Generator>
-        <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
 
